# deezer_metadata

./: Cargo.toml
src/: lib.rs
src/api/: mod.rs
src/api/objects/: album.rs  artist.rs  chart.rs  comment.rs  editorial.rs  genre.rs  info.rs  mod.rs  options.rs  playlist.rs  radio.rs  track.rs  user.rs
