[package]
name = "deezer_metadata"
description = "Uses Deezer's public API to fecth metadata for songs, artists, albums, ..."
license = "Apache-2.0"
version = "0.0.0"
authors = ["DiogoX <diogoxavierpinto@gmail.com>"]

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
